<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20dp"
        android:background="@color/white"
        android:foregroundGravity="center"
        tools:context=".ui.SplashActivity">

        <ImageView
            android:id="@+id/ivSplashImage"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:contentDescription="@string/splash_image"
            android:src="@drawable/iv_location"
            app:layout_constraintBottom_toTopOf="@id/tvAboutInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAboutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="sans-serif"
            android:text="@string/about_device_tracker"
            android:textAlignment="center"
            android:textSize="@dimen/_15sp"
            app:layout_constraintBottom_toTopOf="@id/btnLetsExplore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivSplashImage" />

        <Button
            android:id="@+id/btnLetsExplore"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_margin="50dp"
            android:background="@drawable/bg_rounded"
            android:fontFamily="sans-serif-medium"
            android:text="@string/let_s_explore"
            android:textAllCaps="false"
            android:textSize="@dimen/_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAboutInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>